--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 	<div class="wrapper">
 		<div class="overheader" id="promo">
 			<div class="img two"  id="overheader"></div>
+			<div class="bg"></div>
 			<div class="container">
 				<div class="promo">
 					<div class="heading">Hello, i'm <a href="#">Panutsa Daniel</a></div>
@@ -61,7 +62,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="about">
+		<div class="about" id="about">
 			<div class="container">
 				<div class="about__blocks">
 					<div class="block__img">
