--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 						I'm <span>ready to make</span> a new website <span>creative</span> for you!
 					</div>
 					<div class="buttons">
-						<a id="open" href="#about" target="_self" class="button">Let's begin</a>
+						<a id="open" href="#toHeader" target="_self" class="button">Let's begin</a>
 						<a href="#contact" target="_self" class="button">Notify me!</a>
 					</div>
 					<a href="#" class="scroll-down arrows" id="scroll" name="scroll">
@@ -38,7 +38,7 @@
 			</div>
 		</div>
 		<div class="header">
-			<div class="polosa"></div>
+			<div class="polosa" id="toHeader"></div>
 			<div class="container">
 				<div class="header__menu" id="header">
 					<div class="header__links" id="header__links">
