--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 						<div class="heading">About Daniel.</div>
 						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia odio commodi neque aspernatur illo saepe nihil praesentium sed quod possimus corporis optio, debitis totam, aliquam magni, iusto labore, quasi aut.</p>
 						<p id="secret">Lorem ipsum dolor sit, amet consectetur, adipisicing elit. Quasi laboriosam obcaecati voluptatem excepturi aspernatur minus nobis corrupti optio repellat dicta est enim eius, provident neque totam, incidunt, temporibus corporis dolorum.</p>
-						<a href="files/Panuta_Daniel.pdf" class="btn" download>Download</a>
+						<a href="files/Panuta_Daniel.pdf" class="btn" download>Download CV</a>
 					</div>
 				</div>
 			</div>
