Text about in index.html

--- a/index.html
+++ b/index.html
@@ -71,8 +71,9 @@
 					</div>
 					<div class="block__text">
 						<div class="heading">About Daniel.</div>
-						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia odio commodi neque aspernatur illo saepe nihil praesentium sed quod possimus corporis optio, debitis totam, aliquam magni, iusto labore, quasi aut.</p>
-						<p id="secret">Lorem ipsum dolor sit, amet consectetur, adipisicing elit. Quasi laboriosam obcaecati voluptatem excepturi aspernatur minus nobis corrupti optio repellat dicta est enim eius, provident neque totam, incidunt, temporibus corporis dolorum.</p>
+						<p>Hello, I am Daniel! And I'm glad to see you on my website. Here you can find a little information about me. I've been doing programming for the third year and I'm enjoying this time. I can create a website, or work with a database, including creating programs for business analysis.
+						</p>
+						<p id="secret">If you are interested in me or I can help you with something, then contact me.Press the button and you will receive CV.</p>
 						<a href="files/Panuta_Daniel.pdf" class="btn" download>Download CV</a>
 					</div>
 				</div>
