--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 						<p>Hello, I am Daniel! And I'm glad to see you on my website. Here you can find a little information about me. I've been doing programming for the third year and I'm enjoying this time. I can create a website, or work with a database, including creating programs for business analysis.
 						</p>
 						<p id="secret">If you are interested in me or I can help you with something, then contact me.Press the button and you will receive CV.</p>
-						<a href="files/Panuta_Daniel.pdf" class="btn" download>Download CV</a>
+						<a href="files/CV_Daniel_Panuta.pdf" class="btn" download>Download CV</a>
 					</div>
 				</div>
 			</div>
